Fixed px-1 spacing class

--- a/src/spacing.css
+++ b/src/spacing.css
@@ -40,6 +40,7 @@
 
 .px-1 {
   padding-left: 0.25rem !important;
+  padding-right: 0.25rem !important;
 }
 
 .pt-1,
